fixed upButton visibility

--- a/app/sass/components/_upButton.scss
+++ b/app/sass/components/_upButton.scss
@@ -1,5 +1,5 @@
 .upButton{
-	display: block;
+	display: none;
 	position: absolute;
 	top: 1582px;
 	right: 363px;
